--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_earning.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_earning.xml
@@ -57,6 +57,21 @@
         android:fadeScrollbars="true"/>
 
 
+    <LinearLayout
+        android:id="@+id/linearLayoutNoItems"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topRl"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+    <ImageView
+        android:layout_width="189dp"
+        android:layout_height="67dp"
+        android:src="@drawable/ic_sedan_no_rides"
+        android:tag="@string/dont_touch_me"
+        />
+
     <TextView
         android:id="@+id/textViewInfoDisplay"
         android:layout_width="wrap_content"
@@ -66,6 +81,8 @@
         android:text="@string/tap_to_retry"
         android:textColor="@color/black"
         android:textSize="@dimen/button_text_size" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
