--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_earning.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_earning.xml
@@ -64,6 +64,7 @@
         android:layout_below="@+id/topRl"
         android:gravity="center"
         android:orientation="vertical"
+        android:visibility="gone"
         >
     <ImageView
         android:layout_width="189dp"
