wl_dev: notes added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -414,6 +414,17 @@
                                 android:text="lllllllllllllll"
                                 android:textColor="@color/black_text_v2"
                             />
+                            <TextView
+                                android:id="@+id/tvCustomerNotes"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="visible"
+                                android:tag="@string/dont_touch_me"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginBottom="4dp"
+                                style="@style/TextMedium"
+                                tools:text="lllllllllllllll"
+                            />
 
                         </LinearLayout>
 
