--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -145,6 +145,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvGender" />
 
         <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/tvArrow"
             android:layout_width="12dp"
             app:layout_constraintEnd_toEndOf="@id/spinnerGender"
             app:layout_constraintTop_toTopOf="@+id/spinnerGender"
