--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -402,7 +402,17 @@
                                 android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                                 android:textColor="@color/black_text_v2"
                             />
-
+                            <TextView
+                                android:layout_marginTop="20px"
+                                android:layout_marginBottom="20px"
+                                android:id="@+id/tvRentalRideInfo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:maxLines="2"
+                                android:textSize="28px"
+                                tools:text="4 hour | Max. 80 km | Rs. 1500"
+                                android:textColor="@color/black_text_v2"
+                                />
                             <TextView
                                 android:id="@+id/textViewCustomerCashRequired"
                                 android:layout_width="wrap_content"
