--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
@@ -125,6 +125,27 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/llRentalRequest"
+            android:layout_width="match_parent"
+            android:layout_height="70px"
+            android:gravity="center"
+            android:splitMotionEvents="false"
+            android:visibility="visible"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/tvRentalRideInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="3"
+                tools:text="4 hour | Max. 80 km | Rs. 1500"
+                android:gravity="center"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_32"/>
+
+        </LinearLayout>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="2px"
