hide rental and outstation from rate card

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -463,6 +463,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:visibility="gone"
             android:id="@+id/rlRentalVehicles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -477,6 +478,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:visibility="gone"
             android:id="@+id/rlOutstationVehicles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
