--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_rental_outstation_packages.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_rental_outstation_packages.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:tag="@string/dont_touch_me"
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="wrap_content">
@@ -14,7 +15,8 @@
         android:textSize="12sp"
         android:layout_marginTop="8dp"
         android:textColor="@color/text_color"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:layout_below="@+id/tvPackages"/>
     <TextView
         android:id="@+id/tvFarePerMinute"
@@ -24,8 +26,9 @@
         android:text="Per Minute: $3"
         android:layout_marginTop="5dp"
         android:textSize="12sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:textColor="@color/text_color"
-        android:layout_marginStart="5dp"
         android:layout_below="@+id/tvBaseFare"/>
 
     <TextView
@@ -36,22 +39,297 @@
         android:text="Per Mile: $10"
         android:textSize="12sp"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:textColor="@color/text_color"
-        android:layout_marginStart="5dp"
         android:layout_below="@+id/tvFarePerMinute"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/dividerColor"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        />
 
     <TextView
         android:id="@+id/textViewTripsText"
         android:layout_width="match_parent"
         android:layout_height="39dp"
-        android:layout_marginTop="7dp"
-        android:background="@color/grey_ride_detail_bg"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:paddingStart="13dp"
         android:text="@string/trips"
+        android:layout_marginTop="6dp"
         android:textSize="14sp"
         style="@style/TextNormal" />
+    <LinearLayout
+        android:id="@+id/llBeforeRide"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="vertical">
 
+
+        <TextView
+            android:id="@+id/textViewBeforeRide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="8dp"
+            android:text="@string/before_ride"
+            android:textColor="@color/themeColor"
+            android:textSize="14sp"
+
+            />
+
+
+        <RelativeLayout
+            android:id="@+id/rlBeforeRide"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="10dp">
+
+            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                android:id="@+id/textViewPickupCharges"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pickup_charges"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"/>
+
+            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                android:id="@+id/textViewPickupChargesperkm"
+                android:layout_toEndOf="@+id/textViewPickupCharges"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:text="@string/per_format"
+                android:textColor="@color/textColorLight"
+                android:textSize="13sp"/>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewPickupCharges"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewPickupChargesCondStar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text=""
+                    android:textColor="@color/themeColor"
+                    android:textSize="12sp"/>
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewPickupChargesCond"
+                    android:layout_width="180dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/NA"
+                    android:textColor="@color/textColorLight"
+                    android:textSize="12sp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textViewPickupChargesValues"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="@string/NA"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/dividerColor"/>
+
+        </RelativeLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/llInRide"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewInRide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="8dp"
+            android:text="@string/in_ride_rate"
+            android:textColor="@color/themeColor"
+            android:textSize="14sp"
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                android:id="@+id/textViewBaseFare"
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:text="@string/base_fare"
+                android:textColor="@color/textColor"
+                android:textSize="16sp"/>
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal5"
+                android:layout_width="5dp"
+                android:layout_height="5dp"
+                android:layout_gravity="bottom"
+                android:src="@drawable/ring_orange_dark"/>
+
+            <RelativeLayout
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewDistancePKm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:text="@string/distance_lower"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"/>
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewPKm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewDistancePKm"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:text="@string/per_format"
+                    android:textColor="@color/textColorLight"
+                    android:textSize="14sp"/>
+
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal4"
+                android:layout_width="5dp"
+                android:layout_height="5dp"
+                android:layout_gravity="bottom"
+                android:src="@drawable/ring_orange_dark"/>
+
+            <RelativeLayout
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewTimePKm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:text="@string/time"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"/>
+
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewPm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewTimePKm"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:text="@string/per_min"
+                    android:textColor="@color/textColorLight"
+                    android:textSize="14sp"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/textViewBaseFareValue"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_marginEnd="15dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="@string/NA"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/textViewDistancePKmValue"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:text="@string/NA"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"/>
+
+
+            <TextView
+                android:id="@+id/textViewTimePKmValue"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_marginStart="15dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:text="@string/NA"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+            android:id="@+id/textViewDifferentialPricingEnable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/diffrential_pricing_rate"
+            android:layout_marginStart="15dp"
+            android:visibility="visible"
+            android:layout_marginBottom="6dp"
+            android:textColor="@color/textColorLight"
+            android:textSize="12sp"
+            />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        android:background="@color/chat_background"
+        android:layout_marginTop="10dp"
+        />
 </LinearLayout>
 
 
