Package name added, UI fixed done

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_rental_outstation_vehicle.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_rental_outstation_vehicle.xml
@@ -25,6 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <ImageView
+        android:layout_below="@+id/rvPackages"
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/chat_background"
+        android:layout_marginTop="10dp"
+        />
 </RelativeLayout>
 
 
