--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_rental_outstation_packages.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_rental_outstation_packages.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:tag="@string/dont_touch_me"
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/tvPackageName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        tools:text="1. Package "
+        android:textSize="15sp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/text_color"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp" />
 
     <TextView
         android:id="@+id/tvBaseFare"
@@ -13,11 +26,10 @@
         android:gravity="center_vertical"
         android:text="Base Fare: $30"
         android:textSize="12sp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/text_color"
         android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_below="@+id/tvPackages"/>
+        android:layout_marginEnd="12dp" />
     <TextView
         android:id="@+id/tvFarePerMinute"
         android:layout_width="wrap_content"
@@ -28,8 +40,7 @@
         android:textSize="12sp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:textColor="@color/text_color"
-        android:layout_below="@+id/tvBaseFare"/>
+        android:textColor="@color/text_color" />
 
     <TextView
         android:id="@+id/tvFarePerMile"
@@ -41,10 +52,10 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:textColor="@color/text_color"
-        android:layout_below="@+id/tvFarePerMinute"/>
+        android:textColor="@color/text_color" />
 
     <ImageView
+        android:id="@+id/ivSeparatorUpper"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/dividerColor"
@@ -107,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/per_format"
                 android:textColor="@color/textColorLight"
-                android:textSize="13sp"/>
+                android:textSize="14sp"/>
 
 
             <LinearLayout
@@ -325,8 +336,11 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/ivSeparator"
         android:layout_width="match_parent"
-        android:layout_height="12dp"
+        android:layout_height="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/chat_background"
         android:layout_marginTop="10dp"
         />
