--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -327,13 +327,27 @@
                             android:layout_alignParentStart="true"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="30px"
+                            android:ellipsize="end"
                             android:layout_centerVertical="true"
+                            android:singleLine="true"
                             android:text="@string/NA"
                             android:textSize="40px"
                             android:visibility="visible"
                             android:textColor="@color/black_text_v2"
-                            android:layout_toStartOf="@+id/bDropAddressToggle"
+                            android:layout_toStartOf="@+id/rvPickupFeedImages"
                             />
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rvPickupFeedImages"
+                            android:layout_toStartOf="@id/bDropAddressToggle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="10dp"
+                            android:layout_alignParentBottom="true"
+                            android:overScrollMode="never"
+                            android:layout_centerVertical="true"
+                            tools:listitem="@layout/item_image_with_text"
+                            android:layout_marginStart="10dp"/>
 
                         <Button
                             android:id="@+id/bDropAddressToggle"
@@ -341,7 +355,6 @@
                             android:layout_width="wrap_content"
                             android:minWidth="80dp"
                             android:text="@string/drop"
-                            android:gravity="center"
                             android:layout_toStartOf="@+id/relativeLayoutCall"
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="10dp"
@@ -376,6 +389,7 @@
                     </RelativeLayout>
 
                     <ImageView
+                        android:id="@+id/view_line"
                         android:layout_width="match_parent"
                         android:layout_height="2px"
                         android:background="@color/grey_light"
