--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_here_maps.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_here_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -14,8 +14,8 @@
     <WebView
         android:id="@+id/wv"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topRl"
         >
     </WebView>
 
@@ -24,9 +24,20 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_below="@+id/topRl"
+        />
+
+    <Button
+        android:id="@+id/bAddPlace"
+        style="@style/ButtonTheme"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:text="@string/add_place"
+
+        />
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
