f_driver_fare_mandatory: driver_fare_mandatory case handled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -694,6 +694,7 @@
                         android:visibility="visible">
 
                         <ImageView
+                            android:id="@+id/ivWaitInRideDiv"
                             android:layout_width="2px"
                             android:layout_height="72px"
                             android:background="@color/bg_grey_opaque"
