--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_confirm_emergency_contact.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_confirm_emergency_contact.xml
@@ -74,8 +74,8 @@
                         android:includeFontPadding="false"
                         android:hint="@string/code"
                         android:textColor="@color/black"
-                        android:layout_marginStart="30px"
-                        android:textSize="30px"
+                        android:layout_marginStart="15sp"
+                        android:textSize="15sp"
                         android:textColorHint="@color/textColorLight"
                         android:drawableEnd="@drawable/arrow_down"
                         android:drawablePadding="3dp"
