--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_here_maps_feedback.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_here_maps_feedback.xml
@@ -9,19 +9,24 @@
 
     <include layout="@layout/layout_top_bar"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topRl">
+
     <LinearLayout
         android:id="@+id/llContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/topRl"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+
         <ImageView
             android:id="@+id/ivReviewImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="fitCenter"
             android:layout_margin="20dp"
+            android:scaleType="fitCenter"
             />
 
 
@@ -29,26 +34,60 @@
             android:id="@+id/tvAddCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/maven_pro_medium"
+            android:text="@string/add_category"
             android:textColor="@color/text_color"
             android:textSize="18sp"
-            android:text="@string/add_category"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/maven_pro_medium"
             android:textStyle="bold"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
             />
-        
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvCategories"
+
+        <EditText
+            android:id="@+id/etSearch"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:layout_marginStart="15dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="10dp"
-            android:scrollbars="vertical"
-            android:background="@drawable/background_white_rounded_bordered"
+            android:layout_marginStart="15dp"
+            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_search"
+            android:fontFamily="@font/maven_pro_regular"
+            android:hint="@string/search_a_category"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textColor="@color/textColor"
+            android:textSize="14sp"
             />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvCategories"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/background_white_rounded_bordered"
+                android:scrollbars="vertical"
+                />
+
+            <include
+                layout="@layout/layout_no_data_place_holder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                />
+
+        </RelativeLayout>
+
 
         <Button
             android:id="@+id/bSubmit"
@@ -59,8 +98,7 @@
             />
 
 
-
     </LinearLayout>
-
+    </ScrollView>
 
 </RelativeLayout>
