--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_leaderboard.xml
@@ -55,9 +55,9 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/daily_leaderboard"
-            android:textColor="@color/white"
+            android:textColor="@color/themeColor"
             android:textSize="@dimen/share_lb_text_size"
-            android:background="@color/themeColor"
+            android:background="@drawable/background_orange_bottom_line"
             />
         <TextView
             android:id="@+id/textViewWeekly"
@@ -68,7 +68,6 @@
             android:textColor="@color/textColor"
             android:textSize="@dimen/share_lb_text_size"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/background_white_bordered"
             />
 
     </RelativeLayout>
@@ -77,7 +76,9 @@
         android:id="@+id/relativeLayoutListTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15px"
+        android:paddingTop="30px"
+        android:background="@color/grey_new"
+        android:paddingBottom="30px"
         >
 
         <TextView
@@ -87,9 +88,9 @@
             android:gravity="center"
             android:text="@string/lb_rank"
             android:textColor="@color/grey_dark_less"
-            android:textSize="@dimen/share_lb_text_size_medium"
+            android:textSize="@dimen/text_size_24"
             android:layout_centerVertical="true"
-            android:layout_marginStart="30px"
+            android:layout_marginStart="50px"
             />
         <TextView
             android:id="@+id/textViewName"
@@ -97,8 +98,8 @@
             android:layout_height="wrap_content"
             android:text="@string/lb_name"
             android:textColor="@color/grey_dark_less"
-            android:textSize="@dimen/share_lb_text_size_medium"
-            android:layout_marginStart="240px"
+            android:textSize="@dimen/text_size_24"
+            android:layout_marginStart="160px"
             android:layout_centerVertical="true"
             />
 
@@ -109,18 +110,13 @@
             android:gravity="center"
             android:text="@string/lb_no_downloads"
             android:textColor="@color/grey_dark_less"
-            android:textSize="@dimen/share_lb_text_size_small"
+            android:textSize="@dimen/text_size_24"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="20px"
+            android:layout_marginEnd="60px"
             />
 
     </RelativeLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:background="@color/grey_light"
-        android:layout_marginTop="15px"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewLb"
