--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_lb_entry.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_lb_entry.xml
@@ -4,27 +4,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="110px"
-    android:splitMotionEvents="false"
-    >
-
+    android:splitMotionEvents="false">
 
     <RelativeLayout
-        android:layout_width="120px"
-        android:layout_height="match_parent"
-        android:background="@color/grey_light_more"
-        >
+        android:layout_width="150px"
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/textViewRank"
-            android:layout_width="80px"
-            android:layout_height="80px"
+            android:layout_width="60px"
+            android:layout_height="60px"
             android:layout_centerVertical="true"
-            android:layout_marginStart="20px"
-            android:background="@drawable/circle_white"
+            android:background="@drawable/circle_grey_new"
             android:gravity="center"
+            android:layout_centerInParent="true"
             android:tag="mwar"
             android:text="1"
             android:textColor="@color/grey_dark"
-            android:textSize="@dimen/share_lb_text_size"
+            android:textSize="@dimen/share_lb_text_size_medium"
             />
 
     </RelativeLayout>
@@ -35,10 +31,10 @@
         android:layout_width="420px"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="150px"
+        android:layout_marginStart="160px"
         android:text="@string/lb_name"
         android:textColor="@color/grey_dark"
-        android:textSize="@dimen/share_lb_text_size"
+        android:textSize="@dimen/share_lb_text_size_medium"
         android:singleLine="true"
         />
 
@@ -48,18 +44,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="40px"
+        android:layout_marginEnd="60px"
         android:gravity="center_vertical|end"
         android:text="100"
         android:textColor="@color/grey_black"
-        android:textSize="@dimen/share_lb_text_size"
+        android:textSize="@dimen/share_lb_text_size_medium"
         />
 
-    <ImageView
+    <View
         android:layout_width="match_parent"
-        android:layout_height="2px"
+        android:layout_height="10px"
         android:layout_alignParentBottom="true"
-        android:background="@color/grey_light"
+        android:background="@color/grey_new"
         />
 
 </RelativeLayout>
