--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -36,12 +36,14 @@
                     android:scaleType="centerInside"
                     />
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/showReferralRLayout"
                     android:layout_width="250dp"
                     android:layout_height="65dp"
                     android:layout_below="@+id/imageViewJugnooLogo"
                     android:layout_centerHorizontal="true"
+                    android:orientation="vertical"
+                    android:gravity="center"
                     android:background="@drawable/referral_box">
 
 
@@ -49,7 +51,6 @@
                         android:id="@+id/textViewReferralCodeDisplay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
                         android:gravity="center"
                         android:text="@string/your_referral_code"
                         style="@style/TextLarge"
@@ -60,16 +61,14 @@
                         android:id="@+id/textViewReferralCodeValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/textViewReferralCodeDisplay"
-                        android:layout_centerHorizontal="true"
                         android:gravity="center"
                         android:singleLine="true"
-                        android:text="12345678"
+                        tools:text="12345678"
                         android:textColor="@color/themeColor"
                         style="@style/TextTitle"
                         />
 
-                </RelativeLayout>
+                </LinearLayout>
 
 
             </RelativeLayout>
