--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -111,9 +111,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_margin="30px"
+                    android:layout_marginStart="20px"
+                    android:layout_marginEnd="5px"
+                    android:layout_marginTop="20px"
+                    android:layout_marginBottom="20px"
                     android:orientation="vertical"
-                    android:layout_toEndOf="@id/profileRl">
+                    android:layout_toEndOf="@id/profileRl"
+                    android:layout_toStartOf="@+id/ivEditIcon">
 
                     <TextView
                         android:id="@+id/textViewDriverName"
