--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_current_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_current_details.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/label_credits"
-            style="@style/TextMedium"
+            style="@style/TextLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -26,11 +26,11 @@
 
         <TextView
             android:id="@+id/tv_credits_value"
-            style="@style/TextMedium"
+            style="@style/TextLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginEnd="5dp"
             android:layout_toEndOf="@id/label_credits"
             android:gravity="end"
@@ -38,7 +38,7 @@
 
         <TextView
             android:id="@+id/label_comission"
-            style="@style/TextMedium"
+            style="@style/TextLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_credits_value"
@@ -48,13 +48,13 @@
 
         <TextView
             android:id="@+id/tv_comission_value"
-            style="@style/TextMedium"
+            style="@style/TextLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_below="@id/tv_credits_value"
             android:layout_marginEnd="5dp"
-            android:layout_toEndOf="@id/label_credits"
+            android:layout_toEndOf="@id/label_comission"
             android:gravity="end"
             tools:text="50"/>
 
@@ -66,7 +66,7 @@
         style="@style/TextNormal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_white_grey_light_selector"
+        android:background="?attr/selectableItemBackground"
         android:drawableEnd="@drawable/ic_chevron_right"
         android:paddingTop="17dp"
         android:paddingBottom="17dp"
@@ -86,7 +86,7 @@
         style="@style/TextNormal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_white_grey_light_selector"
+        android:background="?attr/selectableItemBackground"
         android:drawableEnd="@drawable/ic_chevron_right"
         android:paddingTop="17dp"
         android:paddingBottom="17dp"
