--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
@@ -2,7 +2,7 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/grey_light_alpha"
+    android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/llRoot"
