--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -148,6 +148,7 @@
         <item name="android:textColorHint">@color/textColorLight</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/maven_pro_regular</item>
+        <item name="colorControlHighlight">@color/grey_light_more</item>
     </style>
     <style name="TextMedium">
         <item name="android:tag">@string/dont_touch_me</item>
